@startuml

title __MAINFRAGMENTS's Class Diagram__\n

  namespace MainFragments {
    class MainFragments.FragmentList {
        {static} ~ SHARE : int
        ~ TAG : String
        ~ auth : FirebaseAuth
        ~ cardListView : ListView
        ~ cardListener : ListenerRegistration
        ~ cardModels : ArrayList<ListCardModel>
        ~ cm : ConnectivityManager
        ~ db : FirebaseFirestore
        ~ imageIDs : ArrayList<Integer>
        ~ progList : ProgressBar
        ~ user : FirebaseUser
        ~ view : View
        + cardDialog()
        + deleteCard()
        + errorDialog()
        + onCreateView()
        + onDestroy()
        + onStart()
        + shareCard()
        - checkConnection()
    }
  }
  

  namespace MainFragments {
    class MainFragments.FragmentList.ShareCard {
        # doInBackground()
        # onPostExecute()
        # onPreExecute()
    }
  }
  

  namespace MainFragments {
    class MainFragments.FragmentSlide {
        {static} ~ SHARE : int
        ~ TAG : String
        ~ argbEvaluator : ArgbEvaluator
        ~ auth : FirebaseAuth
        ~ cardListener : ListenerRegistration
        ~ cm : ConnectivityManager
        ~ colors : Integer[]
        ~ db : FirebaseFirestore
        ~ displayName : TextView
        ~ imageIDs : ArrayList<Integer>
        ~ models : ArrayList<Model>
        ~ progList : ProgressBar
        ~ user : FirebaseUser
        ~ view : View
        ~ viewPager : ViewPager
        + deleteCard()
        + errorDialog()
        + onCreateView()
        + onStart()
        + shareCard()
        - checkConnection()
        - dpToPx()
    }
  }
  

  namespace MainFragments {
    class MainFragments.FragmentSlide.ShareCard {
        # doInBackground()
        # onPostExecute()
        # onPreExecute()
    }
  }
  

  MainFragments.FragmentList -up-|> androidx.fragment.app.Fragment
  MainFragments.FragmentList o-- com.example.cardchain.CardListAdapter : cardListAdapter
  MainFragments.FragmentList o-- com.example.cardchain.ListCardModel : cardModel
  MainFragments.FragmentList +-down- MainFragments.FragmentList.ShareCard
  MainFragments.FragmentList.ShareCard -up-|> android.os.AsyncTask
  MainFragments.FragmentSlide -up-|> androidx.fragment.app.Fragment
  MainFragments.FragmentSlide o-- com.example.cardchain.Adapter : adapter
  MainFragments.FragmentSlide o-- com.example.cardchain.Model : model
  MainFragments.FragmentSlide +-down- MainFragments.FragmentSlide.ShareCard
  MainFragments.FragmentSlide.ShareCard -up-|> android.os.AsyncTask


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
